css/css-transitions/KeyframeEffect-setKeyframes.tentative.html is a failure https://bugs.webkit.org/show_bug.cgi?id=235062

Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

Mark WPT progressions.

* web-platform-tests/css/css-transitions/KeyframeEffect-setKeyframes.tentative-expected.txt:

Source/WebCore:

The WPT at css/css-transitions/KeyframeEffect-setKeyframes.tentative.html, which checks
the behavior of programmatically changing keyframes for a CSS Transition, highlighted
three failures:

1. we did not flush pending style changes as setKeyframes() was called for an animation
   created fromm CSS (CSS Transition or CSS Animation),
2. we did not use the style from the last style update to computed the before-change style
   if available, but rather the computed style generated _after_ the last style update,
3. we did not apply _all_ animations as we compute the before-change style to consider
   new transitions to run, but only animations matching the current property.

We've corrected all of those errors and this test now passes save for one failure, which
seems to be a different type of problem and will be looked at in a future patch.

* animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::setBindingsKeyframes):
* style/Styleable.cpp:
(WebCore::updateCSSTransitionsForStyleableAndProperty):


Canonical link: https://commits.webkit.org/245925@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287881 268f45cc-cd09-0410-ab3c-d52691b4dbfc